--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,7 @@ body {
 .calculator-grid > button:hover {
     background-color: rgba(255, 255, 255, .9);
 }
+
+.span-two {
+    grid-column: span 2;
+}
